--- a/src/style.css
+++ b/src/style.css
@@ -9,6 +9,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  width : 80%;
+Margin: 0 auto;
 }
 .cards {
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
